[package]
name = "tiktoken"
version = "0.2.0"
edition = "2021"
rust-version = "1.57.0"

[lib]
name = "_tiktoken"
crate-type = ["cdylib", "rlib"]

[features]
default = ["python"]
python = ["dep:pyo3"]

[dependencies]
pyo3 = { version = "0.17.3", features = ["extension-module"], optional = true}
# tiktoken dependencies
fancy-regex = "0.10.0"
regex = "1.7.0"
rustc-hash = "1.1.0"
bstr = "1.0.1"

[profile.release]
incremental = true
